--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity
             android:name=".activities.GameplayActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".activities.settings.SettingsActivity"
             android:screenOrientation="landscape"></activity>
     </application>
 
