--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,11 @@
         <activity
             android:name=".activities.GameplayActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".activities.settings.SettingsActivity"
+        <activity
+            android:name=".activities.settings.SettingsActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activities.statistics.StatisticsActivity"
             android:screenOrientation="landscape"></activity>
     </application>
 
