--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="rs.ac.bg.etf.ki150362.socceriscoming">
 
     <application
@@ -8,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <service
             android:name=".util.service.MusicService"
             android:enabled="true" />
@@ -23,14 +25,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.GameplayActivity"
-            android:screenOrientation="landscape" />
-        <activity
             android:name=".activities.settings.SettingsActivity"
             android:screenOrientation="landscape" />
         <activity
             android:name=".activities.statistics.StatisticsActivity"
-            android:screenOrientation="landscape"></activity>
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activities.gaming.GameStartActivity"
+            android:screenOrientation="landscape" />
+        <activity android:name=".activities.GameplayActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
